# python-project-52

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  manage.py  pyproject.toml  sonar-project.properties
task_manager/: forms.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
task_manager/fixtures/: test_labels.json  test_statuses.json  test_tasks.json  test_users.json
task_manager/labels/: admin.py  form.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py  0002_alter_labels_options_alter_labels_name.py  0003_alter_labels_options.py
task_manager/labels/tests/: test_forms.py  test_models.py  test_views.py  testcase.py
task_manager/statuses/: admin.py  form.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options_alter_status_name.py
task_manager/statuses/tests/: test_forms.py  test_models.py  test_views.py  testcase.py
task_manager/tasks/: filter.py  filters.py  filtres.py  form.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: tasks.json
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_options_alter_task_description.py  0003_alter_task_options_alter_task_author_and_more.py
task_manager/tasks/tests/: test_forms.py  (+3 more)
task_manager/templates/: base.html  index.html
task_manager/users/: admin.py  form.py  forms.py  mixins.py  tests.py  urls.py  view2.py  views.py
(+26 files in other folders)
