[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "django-bootstrap5>=25.2",
    "django-filter>=25.2",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.2.1",
    "rollbar>=1.3.0",
]
